# building_a_game_engine_with_rust

./: README.md
starter/: Cargo.toml  Makefile  build.rs  tests.rs
starter/c_output/: test_game_exe
starter/opengl_wrapper_lib/: opengl_wrapper_lib.c
starter/pingpong/src/: main.rs
starter/src/: lib.rs
starter/videogame/: Cargo.toml
starter/videogame/src/: main.rs
