[package]
name = "opengl_game"
version = "0.1.0"
authors = ["Juan Carlos Kuri"]
build = "build.rs"

[[bin]]
name = "tests"
path = "tests.rs"

[[bin]]
name = "pingpong"
path = "pingpong/src/main.rs"

[[bin]]
name = "videogame"
path = "videogame/src/main.rs"

[dependencies]
libc = "0.2"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
async-std = "1.13.0"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.109"
rand = "0.8"

[build-dependencies]
cc = "1.0"
